# hdbpp-mysql-project

./: CMakeLists.txt  README.md
doc/: README.md  build.md
resources/hdbpp-mysql-docker/: Dockerfile  Makefile  README.md
resources/schema/: hdb_innodb_partition.sql  hdb_innodb_schema.sql  hdb_innodb_user.sql
services/hdbpp-innodb-partition-management/: README.md  hdbpp-innodb-partition-management.py
